               (Lars George via Stack)
   HBASE-2095  TIF should support more confs for the scanner (Bassam Tabbara
               via Andrew Purtell)
   HBASE-2133  Increase default number of client handlers
   HBASE-2149  hbase.regionserver.global.memstore.lowerLimit is too low
   HBASE-2157  LATEST_TIMESTAMP not replaced by current timestamp in KeyValue
               (bulk loading)

  NEW FEATURES
   HBASE-1961  HBase EC2 scripts
   HBASE-1982  [EC2] Handle potentially large and uneven instance startup times
   HBASE-2009  [EC2] Support mapreduce
   HBASE-2012  [EC2] LZO support
   HBASE-2080  [EC2] Support multivolume local instance storage
   HBASE-2083  [EC2] HDFS DataNode no longer required on master
   HBASE-2084  [EC2] JAVA_HOME handling broken
   HBASE-2100  [EC2] Adjust fs.file-max
   HBASE-2103  [EC2] pull version from build
   HBASE-2131  [EC2] Mount data volumes as xfs, noatime
   HBASE-2037  Alternate indexed hbase implementation; speeds scans by adding
               indexes to regions rather secondary tables

Release 0.20.2 - November 18th, 2009
  INCOMPATIBLE CHANGES

  BUG FIXES
   HBASE-1905  Remove unused config. hbase.hstore.blockCache.blockSize
   HBASE-1906  FilterList of prefix and columnvalue not working properly
               with deletes and multiple values
   HBASE-1896  WhileMatchFilter.reset should call encapsulated filter reset
   HBASE-1912  When adding a secondary index to an existing table, it will
               cause NPE during re-indexing (Mingjui Ray Liao via Andrew
               Purtell)
   HBASE-1917  TestScanner.testFilters failing
   HBASE-1908  ROOT not reassigned if only one regionserver left
   HBASE-1916  FindBugs and javac warnings cleanup
   HBASE-1924  MapReduce Driver lost hsf2sf backporting hbase-1684
   HBASE-1777  column length is not checked before saved to memstore
   HBASE-1895  HConstants.MAX_ROW_LENGTH is incorrectly 64k, should be 32k